	* Initial repo creation.
2016-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added 'README'.
	* Moved 'centos7/install_rivendell_centos7.sh' to
	'install_rivendell.sh'.
2016-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added 'twolame' and 'libmad' to the set of dependency packages.
2016-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Get installer working for RHEL 7.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Updated network configuration instructions in 'INSTALL'.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Disabled the firewalld service in 'centos7/install_rivendell.sh'.
	* Added 'telnet', 'lwmon' and 'nc' packages in
	'centos7/install_rivendell.sh'.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FINISHING UP' section to 'INSTALL'.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added step 3) to the FINISHING UP section in 'INSTALL'.
2016-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added 'install_rivendell_devel.sh'.
2016-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'AUTHORS'.
	* Updated 'NEWS'.
	* Incremented the package version to 0.6.1.
2016-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a install for RHEL 6 in 'centos6/'.
	* Split 'INSTALL' into 'INSTALL' and 'INSTALL-RHEL6'/'INSTALL-RHEL7.
	* Moved 'common/disable-selinux.patch' to
	'centos7/disable-selinux.patch'
	* Moved 'common/qt_plugins_3.3rc' to 'centos7/qt_plugins_3.3rc'.
	* Moved 'common/qtrc' to 'centos7/qtrc'.
	* Moved 'centos7/asound.conf' to 'common/asound.conf'.
	* Moved 'common/skel/rog-1.3.3.pdf' to 'common/rog-1.3.3.pdf'.
	* Moved 'rivendell-install.spec.in' to
	'rivendell-install-rhel7.spec.in'.
2016-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Added 'common/no_screen_blank.conf' and
	'common/paravel_support.pdf'.
	* Tweaked install on RHEL 6.
	* Added 'centos6/install_rivendell_devel.sh'.